CSS style fixes
Tried to fix some styling of it all. including fixing clock font.
Note that the bus, weather and news boxes don't line up on the left. although they all have the same left padding.
Need to test on main screen though! As I think I have fixed but locally it dosent look it.

--- a/css/index.css
+++ b/css/index.css
@@ -33,16 +33,18 @@
 	padding: 0;
 }
 
+
+
 body {
 	color: #ffffff;
 	background:#ff7b7b;
+	font-family: 'Cousine', monospace;
 	//background: linear-gradient(270deg, #5a168e, #ef6bdc);
 	//background-size: 400% 400%;
 
 	-webkit-animation: BackgroundColour 30s ease infinite;
 	-moz-animation: BackgroundColour 30s ease infinite;
 	animation: BackgroundColour 30s ease infinite; */
-	font-family: 'Cousine', monospace;
 }
 
 
@@ -52,7 +54,7 @@ div.busnorthbox {
 	text-align: center;
     position: absolute;
     top: 20px;
-    left: 20px;
+    left: 15px;
     transform: translate(-1%,-1%); 
     padding: 15px;
     border: solid 5px #ffffff;
@@ -112,14 +114,14 @@ p.subreddit{
 	font-size:12px;
 }
 
-
 p.jokeauthor{
 	padding-top:5px;
 	font-size:10px;
 	text-align:right;
 }
 
-/* torrents Piece/ */
+
+/* Torrents Piece/ */
 div.torrents {
 	text-align: right;
     position: absolute;
@@ -138,18 +140,15 @@ div.torrents {
 }
 
 
-/* news Piece/ */
+/* /News Piece/ */
 #news {
 	text-align: left;
     position: absolute;
     top: 130px;
     left: 20px;
     transform: translate(-1%,-1%); 
-    padding: 3px;
+    padding: 5px;
     border: solid 5px #ffffff;
-}
-
-#news {
 	font-family: 'Cousine', monospace;
 	font-size: 12px;
 	font-weight: bold;
@@ -157,24 +156,16 @@ div.torrents {
 }
 
 
-#collections{
+/* /Rubbish Collection Piece/ */
+div.collections{
 	background:#000000;
 	bottom:20px;
 	left:400px;
 }
 
 
-#sunriseTime{
-	font-family: 'Cousine', monospace;
-	font-size: 12px;
-	
-}
-
-
 /* /Weather Piece/ */
 div.weatherpane {
-	
-	
     position: absolute;
     bottom: 20px;
     left: 20px;
@@ -190,8 +181,6 @@ div.weathertitle{
 	font-family: sans-serif;
 	padding-bottom:8px;
 	text-align:center;
-	
-	
 }
 
 div.weather {
@@ -209,16 +198,16 @@ div.weatherbox{
 	float:left;
 	height:100px;
 	padding-right: 3px;
-	padding-left:5px;
-	margin-left:10px;
-	margin-right:10px;
+	padding-left: 5px;
+	margin-left: 10px;
+	margin-right: 10px;
 	content-align:bottom;
 }
 
 p.temp{
 	font-size:40px;
-	
 }
+
 
 /* /Date and clock piece/ */
 div.dateAndClock {
@@ -232,6 +221,9 @@ div.dateAndClock {
     border: solid 5px #ffffff;
 }
 
+.light-on {  /*Changes color of text to appear like its "on"*/
+	color: #ffffff;
+}
 
 /* Days of the week */
 div.days {
@@ -250,11 +242,7 @@ div.days .day p {
 	text-transform: uppercase;
 }
 
-
 /* Clock */
-div.clock {
-	margin: 5px 0;
-}
 
 div.clock div{
 	display: inline-block;
@@ -291,7 +279,8 @@ div.meridian div p {
 	color: #ff9595;
 }
 
-/*Changes color of text to appear like its "on"*/
-.light-on {
-	color: #ffffff;
+/* Sunrise, sunset time piece*/
+#sunriseTime{
+	font-family: 'Cousine', monospace;
+	font-size: 12px;
 }
